change_main_nav_z-index: fix z-index position of navbar

--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -14,6 +14,10 @@
 
 .main-nav {
 
+  .navbar {
+    z-index: $zindex-navbar;
+  }
+
   .nav-item.current > a {
     background-color: $brand-primary;
 
